--- a/config/locales/models/ru.yml
+++ b/config/locales/models/ru.yml
@@ -1,8 +1,8 @@
 ru:
   activerecord:
     models:
-      post: "Пост"
-      news: "Новости"
+      consumer: "Пост"
+      interaction: "Новости"
       user: "Пользователь"
     attributes:
       post:
